# msteamsnotifiers

./: .gitignore  LICENSE  README.md  generate_source_dist.bat  msteamsnotifiers.py  pyproject.toml  requirements.txt  setup.py
src/: msteamsnotifiers.py
