[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "msteamsnotifiers"
authors = [{name = "Josh Burnett", email = "josh@burnettsonline.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "friendly_traceback",
]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/joshburnett/msteamsnotifiers"

[tool.flit.module]
name = "msteamsnotifiers"

